Full screen for background image Href links on mobile fixed minor other changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,9 @@ html::-webkit-scrollbar{
   display: none;
 }
 
+body {
+  background-color: white;
+}
 
 
 #menuIcon {
